code-server/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: code-server
  namespace: code-server
  annotations:
    kubesphere.io/creator: admin
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vscode.fancytube-test.xyz
    secretName: code-server-tls
  rules:
    - host: vscode.fancytube-test.xyz
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: code-server
                port:
                  number: 80
